Switch to flex layout to prevent UI overlapping

--- a/public/assets/styles/game.css
+++ b/public/assets/styles/game.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: calc(100 * var(--vh, 1vh));
+  height: 100%;
 
   display: flex;
   flex-direction: column;
